apps/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: database
spec:
  replicas: 1
  strategy:
    type: Recreate # 关键：SQLite 防库裂，先杀旧再启新
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      securityContext:
        runAsUser: 5050
        runAsGroup: 5050
        fsGroup: 5050    # 关键：修复卷权限挂载问题
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:8.14  # 指定版本
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pgadmin-data
          mountPath: /var/lib/pgadmin
        # resources:
        #   requests:
        #     cpu: "100m"
        #     memory: "256Mi"
        #   limits:
        #     cpu: "500m"
        #     memory: "512Mi"
      volumes:
      - name: pgadmin-data
        persistentVolumeClaim:
          claimName: pgadmin-pvc-longhorn
