apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: database
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
