apps/pgadmin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-tls
  namespace: database
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.k3s.besthomelab.tech`) # 替换为你想要的二级域名
      kind: Rule
      services:
        - name: pgadmin-svc
          port: 80
  tls: {} # 自动寻找 tlsStore 里的泛域名证书
